--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <div class="col-1-of-2">
                         <h3 class="heading-tertiary u-margin-bottom-small">MY NAME IS AHMAD ALFAN JUNIYANTO</h3>
                         <p class="paragraph">
-                            I’m a web designer, and full stack developer with a great passion for building things with code. I live in beautiful place on Jepara, Cebtral of Java - INDONESIA.<br>
+                            I’m a web designer, and full stack developer with a great passion for building things with code. I live in beautiful place on Jepara, Central of Java - INDONESIA.<br>
                             I am very interest with PROGRAMMING WORLD. I have learned procedural programming languange like C, i also speak OOP such as Java, PHP, C#, C++, Javascript, Python, Golang. I am totally strong using Web Framewwork like CodeIgniter and Laravel.
                         </p>
                         <h3 class="heading-tertiary u-margin-bottom-small">My Focus on future</h3>
