add redme rename file

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                 <div class="row">
                     <div class="story">
                        <figure class="story__shape">
-                            <img src="img/nat-8.jpg" alt="natours person" class="story__img">
+                            <img src="img/nat-8.jpg" alt="image person" class="story__img">
                             <figcaption class="story__caption">Hafizh A.</figcaption>
                        </figure>
                        <div class="story__text">
@@ -262,7 +262,7 @@
                 <div class="row">
                     <div class="story">
                        <figure class="story__shape">
-                            <img src="img/nat-9.jpg" alt="natours person" class="story__img">
+                            <img src="img/nat-9.jpg" alt="image person" class="story__img">
                             <figcaption class="story__caption">Rizky Arif</figcaption>
                        </figure>
                        <div class="story__text">
